syntax = "proto3";

package berty.entity;

option go_package = "berty.tech/core/entity";

import "gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";

message DevicePushIdentifier {
  string id = 1 [(gogoproto.moretags) = "gorm:\"primary_key\"", (gogoproto.customname) = "ID"];
  google.protobuf.Timestamp created_at = 2 [(gogoproto.stdtime) = true, (gogoproto.nullable) = false];
  google.protobuf.Timestamp updated_at = 3 [(gogoproto.stdtime) = true, (gogoproto.nullable) = false];

  bytes push_info = 4;
  string relay_pubkey = 5  [(gogoproto.customname) = "RelayPubkey"];

  string device_id = 6 [(gogoproto.customname) = "DeviceID"];
}
